<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IB SimpleScan</string>
    <string name="refresh_btn">Refresh scanners</string>
    <string name="start_capture_btn">Start</string>
    <string name="stop_capture_btn">Stop</string>
    <string name="open_scanner_btn">Open</string>
    <string name="close_scanner_btn">Close</string>
    <string name="logo_img">Logo</string>
    <string name="preview_image">Preview</string>
    <string name="email_image">E-mail image</string>
    <string name="enlarge">Enlarge</string>
    <string name="device_count_name"># SCANNERS</string>
    <string name="device_count_default">n/a</string>
    <string name="status_name">NFIQ</string>
    <string name="status_default">n/a</string>
    <string name="frame_time_name">FRAME TIME</string>
    <string name="frame_time_default">n/a</string>
    <string name="usb_device_name">Devices : </string>
    <string name="capture_seq_name">Capture : </string>
    <string name="spoof_enable">Spoof Enable </string>
    <string name="spoof_level">Spoof Level </string>

    <string-array name="spoof_threslevel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string name="bt_nfc_title">NFC</string>
    <string name="tv_nfc_notsupport">The device does not support NFC</string>
    <string name="tv_nfc_working">Please Swipe Your Card</string>
    <string name="tv_nfc_notwork">Please Go To Settings And Open The NFC Switch</string>

    <string name="pcsc_test">IC Card Test</string>
    <string name="psam_test">PSAM Test</string>
    <string name="open_reader">Open Reader</string>
    <string name="close_reader">Close Reader</string>
    <string name="verify">Verify</string>
    <string name="modify">Modify</string>
    <string name="sle4442read_addr">addr(0~255):</string>
    <string name="sle4442read_numm">num(1~256):</string>
    <string name="sle4442write_addr">addr(0~255):</string>
    <string name="sle4428read_addr">addr(0~1023):</string>
    <string name="sle4428read_num">num(0~1024):</string>
    <string name="sle4428write_addr">addr(0~1023):</string>
    <string name="content">content:</string>
    <string name="PSC">PSC</string>
    <string name="reader">Reader:</string>
    <string name="get_ATR">get ATR</string>
    <string name="get_PROTOCOL">get protocol</string>
    <string name="apdu_to_send">APDU to send</string>
    <string name="send_apdu">Send APDU</string>
    <string name="get_ATR_fail">get ATR fail</string>
    <string name="get_ATR_success">get ATR success：</string>
    <string name="get_data_success">get data success</string>
    <string name="get_protocol_success">get protocol success</string>
    <string name="power_on">Power on</string>
    <string name="power_off">Power off</string>
    <string name="send_APDU_fail">send APDU fail</string>
    <string name="send_APDU_success">send APDU success,return：</string>
    <string name="send_comm_success">send command success</string>
    <string name="ic_waring">Tip：\nATR:Reset response instructions\nprotocol：Communication protocol\n"A0A40000023F00":Open the smart kagan directory commands\nAPDU:Smart card communication instruction</string>
    <string name="operation_fail">Operation failed</string>
    <string name="idcard_czz">Proceeding...</string>

    <!-- Print -->
    <string name="print_test">Print Test</string>
    <string name="printer_version">Printer Version：</string>
    <string name="bar_code">Barcode:</string>
    <string name="print_bar_code">Print Barcode</string>
    <string name="D_bar_code">Qrcode:</string>
    <string name="print_2D_barcode">Print Qrcode</string>
    <string name="walk_paper_lines">Walk Paper Lines:</string>
    <string name="walk_paper_test">Walk Paper</string>
    <string name="left_margin">Left Margin:</string>
    <string name="right_margin">Right Margin</string>
    <string name="row_space">Row Space:</string>
    <string name="font_size">Font Size：</string>
    <string name="gray_level">Gray Level:</string>
    <string name="print_content">Print Content：</string>
    <string name="chinese_example">ZH Example</string>
    <string name="english_example">EN Example</string>
    <string name="fr_example">FR Example</string>
    <string name="clear_text">Clear</string>
    <string name="print_text">Print Text</string>
    <string name="print_georgia_text">Print Georgia</string>
    <string name="print_foreign_text">Print Special Language</string>
    <string name="printing_wait">Printing, please wait……</string>
    <string name="D_barcode_loading">Qrcode loading</string>
    <string name="generate_barcode_wait">Generating barcode, please wait……</string>
    <string name="input_print_data">Please input print data</string>
    <string name="maker_search_distance">Walk Paper For Search Black Block:</string>
    <string name="maker_walk_distance">Walk Paper After Haved Search:</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">Black Block Detection</string>
    <string name="maker_error">maker input value not fit</string>
    <string name="maker_not_find">Cannot Find Black Block</string>
    <string name="papercut">Paper Cut</string>
    <string name="walk_paper_intput_value">walk paper intput value not fit</string>
    <string name="print_picture">Print Picture</string>
    <string name="print_long_picture">Print Long Picture</string>
    <string name="print_long_text">Print Long Text</string>
    <string name="print_black">Print Black</string>
    <string name="print_interval">Cricle Print Interval</string>
    <string name="print_cricle_start">Start Cricle Paint</string>
    <string name="print_cricle_stop">Stop Cricle Paint</string>
    <string name="print_cricle_hint">sec/time</string>
    <string name="sure">sure</string>
    <string name="not_find_picture">not find picture</string>
    <string name="input_command">Please Input Command</string>
    <string name="execute_command">Execute Command</string>
    <string name="watting">Please wait while checking driver version</string>
    <string name="noPaper">No paper</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="overTemp">over temp !</string>
    <string name="ptintInit">Printer initialing... Please try again after a few seconds.</string>
    <string name="outOfLeft">Beyond the left margin！</string>
    <string name="outOfLine">Beyond the row space！</string>
    <string name="outOfFont">Beyond the font size！</string>
    <string name="outOfGray">Beyond the gray level！</string>
    <string name="outOfCharSpace">Beyond The Char Space！</string>
    <string name="empty">The content is empty！</string>
    <string name="lengthNotEnougth">The length is not enough！</string>
    <string name="index_text">Print Text</string>
    <string name="index_pic">Picture/Qrcode</string>
    <string name="index_comm">Print Command</string>
    <string name="input_content">input content</string>
    <string name="dialog_comfirm">ConFirm</string>
    <string name="operation_result">Result</string>
    <string name="bl_dy">Print</string>
    <string name="print_waring">Tip: If the SDK provides the function of can not meet your printing needs, you can send the print instruction way for implementation</string>
    <string name="printer_type_common">SerialPort Printer</string>
    <string name="printer_type_usb">USB Printer</string>
    <string name="printer_type_select">Select Printer Type</string>
    <string name="string_offset_range">(0-255)Multiple of 8</string>
    <string name="short_text_content">Short Text</string>
    <string name="hint_short_text">Short Text Within A Line</string>
    <string name="print_short_text">Print Short Text</string>
    <string name="param_error">Invalid Argument</string>
    <string name="auto_linefeed">Auto Linefeed</string>
    <string name="text_too_long">Text too long</string>
    <string name="text_format_error">Text With Wrong Format</string>
    <string name="interval_format_error">Print Interval With Wrong Format</string>
    <string name="not_support">Linefeed Is Disabled</string>
    <string name="printContent1">\n             烧烤\n----------------------------\n日期：2015-01-01 16:18:20\n卡号：12378945664\n单号：1001000000000529142\n----------------------------\n  项目    数量   单价  小计\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n冰镇乳鸽    2    23    46\n秘制烤羊腿  1    56    56\n黯然牛排    2    24    48\n烤火鸡      2    50    100\n炭烧鳗鱼    1    40    40\n烤全羊      1    200   200\n荔枝树烧鸡  1    50    50\n冰镇乳鸽    2    23    46\n 合计：1000：00元\n----------------------------\n本卡金额：10000.00\n累计消费：1000.00\n本卡结余：9000.00\n----------------------------\n 地址：广东省佛山市南海区桂城街道桂澜南路45号鹏瑞利广场A317.B-18号铺\n欢迎您的再次光临\n</string>
    <string name="txt_error_permission">User not authorized</string>
    <string name="start_iris">Iris acquisition</string>
    <string name="start_102_iris">102 Iris acquistion</string>
    <string name="start_iris_binocular">Iris binocular acquistion</string>
    <string name="enroll">Enrollment</string>
    <string name="open_camera">Open Camera</string>
    <string name="close_camera">Close Camera</string>
    <string name="open_light">Open Light</string>
    <string name="close_light">Close Light</string>
    <string name="capture">Capture</string>
    <string name="capture_success">Capture Success</string>
    <string name="acquire_image">Acquire Image</string>
    <string name="quality_score">Quality Score</string>
    <string name="cancel">Cancel</string>
    <string name="enroll_success">Enrollment succeeded</string>
    <string name="enroll_failed">Enrollment failed</string>
    <string name="verify_success">Verification succeeded.</string>
    <string name="verify_failed">Verification failed.</string>
    <string name="enroll_progress">Enrollment Progress</string>
    <string name="acquire_success">Image acquisition succeeded</string>
    <string name="acquire_failed">Failed to get image</string>
    <string name="too_closer">Too closer</string>
    <string name="too_far">Too far</string>
    <string name="keep_away">Move backwards</string>
    <string name="be_closer">Get closer</string>
    <string name="no_iris_detected">No iris detected</string>
    <string name="iris_location_failed">Location failed</string>
    <string name="iris_pool_quality">Pool quality</string>
    <string name="open_eyes_wide">Please open eyes wide</string>
    <string name="verifying">Verifying...</string>
    <string name="not_enroll">No iris, please enroll</string>
    <string name="text_auth_success">Activation successful</string>
    <string name="text_auth_fail">Activation fails</string>
    <string name="text_mirror">Mirror</string>
    <string name="text_flip">Flip</string>
    <string name="text_split">split</string>
    <string name="focal_length">Focal length</string>
    <string name="cm_25">25cm</string>
    <string name="cm_30">30cm</string>
    <string name="loop_test">Loop Test</string>
    <string name="color_card_detection">Color card detection</string>
    <string name="dirty_spot_detection">Dirty spot detection</string>
    <string name="start_test">Start testing</string>
    <string name="exit">Exit</string>

</resources>
